Started on the task

--- a/index.html
+++ b/index.html
@@ -5,17 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:: Profile card component ::</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Kumbh+Sans:wght@700&family=Lexend+Deca&family=Outfit:wght@100;400;700&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>
-        Hello, I am the project
-    </h1>
-    <h2>
-        Hello, this is h2
-    </h2>
-    <h3>
-        Hello, I am a H#, maaaan
-    </h3>
+    <div class="main-box">
+        <div class="top-box">
+            <div class="box-bg-top">
+                <img src="assets/images/bg_top.svg" alt="background top">                   
+            </div>
+            <div class="box-bg-bottom">
+            </div>
+            <div class="profile-picture">
+                <img src="assets/images/Oval_profile_picture.png" alt="profile picture">                   
+            </div>
+            <div class="profile-text">
+                <div class="profile-name">Victor Crest</div>
+                <div class="profile-age">26</div>
+                <div class="profile-city">London</div>
+            </div>
+        </div>
+        <div class="bottom-box">
+            <div class="bottom-box-big-numbers">
+                <div class="big-numbers">80k</div>
+                <div class="big-numbers">803k</div>
+                <div class="big-numbers">1.4K</div>
+            </div>
+            <div class="numbers-of-what">
+                <div class="label">Followers</div>
+                <div class="label">Likes</div>
+                <div class="label">Photos</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
