--- a/index-2-hesh.html
+++ b/index-2-hesh.html
@@ -4,21 +4,53 @@
     <meta charset="UTF-8">
     <title>Profile card component</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Kumbh+Sans:wght@700&family=Lexend+Deca&family=Outfit:wght@100;400;700&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Kumbh+Sans:wght@400;700&family=Lexend+Deca&family=Outfit:wght@100;400;700&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="css/style-hesh.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+    <div class="top-circle">
+        <svg width="693" height="468" viewBox="0 0 693 468" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <ellipse opacity="0.5" cx="204" cy="-21" rx="489" ry="488" transform="rotate(-135 204 -21)" fill="url(#paint0_linear_0_85)"/>
+            <defs>
+            <linearGradient id="paint0_linear_0_85" x1="-281.193" y1="-501.402" x2="-281.193" y2="467" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#0989B4" stop-opacity="0.01"/>
+            <stop offset="0.999399" stop-color="#53FFEE"/>
+            </linearGradient>
+            </defs>
+            </svg>            
+       </div>
+       <div class="bottom-circle">
+        <svg width="748" height="345" viewBox="0 0 748 345" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <ellipse opacity="0.25" cx="489" cy="488" rx="489" ry="488" transform="matrix(0.707107 -0.707107 -0.707107 -0.707107 488.293 1179.84)" fill="url(#paint0_linear_0_86)"/>
+            <defs>
+            <linearGradient id="paint0_linear_0_86" x1="3.80694" y1="7.59834" x2="3.80694" y2="976" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#0989B4" stop-opacity="0.01"/>
+            <stop offset="0.999399" stop-color="#53FFEE"/>
+            </linearGradient>
+            </defs>
+            </svg>            
+       </div>
 <div class="card">
-    <div class="header"></div>
+    <div class="header">
+        <img src="assets/images/bg_top.svg" alt="">
+    </div>
     <div class="body">
         <div>
-            <img src="assets/images/image-victor.jpg" alt="profile photo"/>
+            <div class="user-image">
+                <img src="assets/images/Oval_profile_picture.png" alt="profile photo"/>
+            </div>
             <div class="user">
                 <div class="user-details">
-                    <span>
-                        Hesh Ramsis
+                    <span class="name">
+                        Victor Crest
                     </span>
-                    <span>
-                        31
+                    <span class="age">
+                        26
                     </span>
                 </div>
                 <div class="user-location">
@@ -29,16 +61,16 @@
     </div>
     <div class="footer">
         <div class="footer-item">
-            <span>80k</span>
-            <span>Followers</span>
+            <span class="item-title">80k</span>
+            <span class="item-content">Followers</span>
         </div>
         <div class="footer-item">
-            <span>803K</span>
-            <span>Likes</span>
+            <span class="item-title">803K</span>
+            <span class="item-content">Likes</span>
         </div>
         <div class="footer-item">
-            <span>1.4K</span>
-            <span>Photos</span>
+            <span class="item-title">1.4K</span>
+            <span class="item-content">Photos</span>
         </div>
     </div>
 </div>
