--- a/index.html
+++ b/index.html
@@ -2,43 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Profile card component</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>:: Profile card component ::</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Kumbh+Sans:wght@700&family=Lexend+Deca&family=Outfit:wght@100;400;700&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Kumbh+Sans:wght@400;700&family=Lexend+Deca&family=Outfit:wght@100;400;700&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="css/style-hesh.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <div class="main-box">
-        <div class="top-box">
-            <div class="box-bg-top">
-                <img src="assets/images/bg_top.svg" alt="background top">                   
+    <div class="top-circle">
+        <svg width="693" height="468" viewBox="0 0 693 468" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <ellipse opacity="0.5" cx="204" cy="-21" rx="489" ry="488" transform="rotate(-135 204 -21)" fill="url(#paint0_linear_0_85)"/>
+            <defs>
+            <linearGradient id="paint0_linear_0_85" x1="-281.193" y1="-501.402" x2="-281.193" y2="467" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#0989B4" stop-opacity="0.01"/>
+            <stop offset="0.999399" stop-color="#53FFEE"/>
+            </linearGradient>
+            </defs>
+            </svg>            
+       </div>
+       <div class="bottom-circle">
+        <svg width="748" height="345" viewBox="0 0 748 345" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <ellipse opacity="0.25" cx="489" cy="488" rx="489" ry="488" transform="matrix(0.707107 -0.707107 -0.707107 -0.707107 488.293 1179.84)" fill="url(#paint0_linear_0_86)"/>
+            <defs>
+            <linearGradient id="paint0_linear_0_86" x1="3.80694" y1="7.59834" x2="3.80694" y2="976" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#0989B4" stop-opacity="0.01"/>
+            <stop offset="0.999399" stop-color="#53FFEE"/>
+            </linearGradient>
+            </defs>
+            </svg>            
+       </div>
+<div class="card">
+    <div class="header">
+        <img src="assets/images/bg_top.svg" alt="">
+    </div>
+    <div class="body">
+        <div>
+            <div class="user-image">
+                <img src="assets/images/Oval_profile_picture.png" alt="profile photo"/>
             </div>
-            <div class="box-bg-bottom">
-            </div>
-            <div class="profile-picture">
-                <img src="assets/images/Oval_profile_picture.png" alt="profile picture">                   
-            </div>
-            <div class="profile-text">
-                <div class="profile-name">Victor Crest</div>
-                <div class="profile-age">26</div>
-                <div class="profile-city">London</div>
-            </div>
-        </div>
-        <div class="bottom-box">
-            <div class="bottom-box-big-numbers">
-                <div class="big-numbers">80k</div>
-                <div class="big-numbers">803k</div>
-                <div class="big-numbers">1.4K</div>
-            </div>
-            <div class="numbers-of-what">
-                <div class="label">Followers</div>
-                <div class="label">Likes</div>
-                <div class="label">Photos</div>
+            <div class="user">
+                <div class="user-details">
+                    <span class="name">
+                        Victor Crest
+                    </span>
+                    <span class="age">
+                        26
+                    </span>
+                </div>
+                <div class="user-location">
+                    London
+                </div>
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="footer-item">
+            <span class="item-title">80k</span>
+            <span class="item-content">Followers</span>
+        </div>
+        <div class="footer-item">
+            <span class="item-title">803K</span>
+            <span class="item-content">Likes</span>
+        </div>
+        <div class="footer-item">
+            <span class="item-title">1.4K</span>
+            <span class="item-content">Photos</span>
+        </div>
+    </div>
+</div>
 </body>
 </html>
